# python-cdk-project

./: .env.example  =  README.md  pyproject.toml  requirements.txt  sample_starter_data.json
munnawar_python_function/: index.py  requirements.txt
python_cdk_project/: munnawar_python_function.py  python_cdk_project_stack.py
